fixing checkbox alignment

--- a/docs/kss/public/css/techne.css
+++ b/docs/kss/public/css/techne.css
@@ -9722,7 +9722,7 @@ body {
 }
 .dataCard .col1 input[type=checkbox] {
   margin-right: 10px;
-  margin-top: 24px;
+  margin-top: 14px;
 }
 .floatingCards {
   overflow: hidden;
