--- a/src/less/components/new/patterns/_data-card.less
+++ b/src/less/components/new/patterns/_data-card.less
@@ -101,7 +101,7 @@
 .dataCard{
   .col1 input[type=checkbox]{
     margin-right: 10px; 
-    margin-top: 24px;
+    margin-top: 14px;
   }
   
 }
